RP-1000 Refactoring to improve Sonar Qube score.  No functional impact