@@ -1,7 +1,5 @@
 package org.ihtsdo.termserver.scripting.reports.drugs;
 
-import java.io.IOException;
-import java.io.PrintStream;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -11,33 +9,31 @@ import org.ihtsdo.termserver.scripting.reports.TermServerReport;
 import org.ihtsdo.termserver.scripting.util.DrugUtils;
 import org.snomed.otf.script.dao.ReportSheetManager;
 
-/**
- * DRUGS-506 List Substances that have more than one modification attribute
- * DRUGS-476 Similar, list CDs that have ingredient which has multiple modifications
- */
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+/**
+ * DRUGS-506 List Substances that have more than one modification attribute
+ * DRUGS-476 Similar, list CDs that have ingredient which has multiple modifications
+ */
 public class MultipleModifications extends TermServerReport {
 
 	private static final Logger LOGGER = LoggerFactory.getLogger(MultipleModifications.class);
 
 	Set<Concept> substancesWithMultipleModifications = new HashSet<>();
 	
-	public static void main(String[] args) throws TermServerScriptException, IOException {
+	public static void main(String[] args) throws TermServerScriptException {
 		MultipleModifications report = new MultipleModifications();
 		try {
-			ReportSheetManager.targetFolderId = "1hYd96nzfB35ggffWR_SdPbybpmzynlI6"; //Drugs
-			//report.additionalReportColumns = "FSN, Modifications";
+			ReportSheetManager.setTargetFolderId("1hYd96nzfB35ggffWR_SdPbybpmzynlI6"); //Drugs
 			report.additionalReportColumns = "FSN, Attribute Type, Ingredient Value, Bases";
 			report.init(args);
 			report.loadProjectSnapshot(true);  
 			report.findMultipleModifications();
 			report.findCDsWithMultipleModifications();
 		} catch (Exception e) {
-			LOGGER.info("Failed to produce MultipleModifications due to " + e.getClass().getSimpleName() + ": " + e.getMessage());
-			e.printStackTrace(new PrintStream(System.out));
+			LOGGER.error("Failed to produce report", e);
 		} finally {
 			report.finish();
 		}
@@ -46,10 +42,7 @@ public class MultipleModifications extends TermServerReport {
 	private void findMultipleModifications() throws TermServerScriptException {
 		for (Concept c : SUBSTANCE.getDescendants(NOT_SET)) {
 			List<Concept> bases = getBases(c);
-			
 			if (bases.size() > 1) {
-				//report (c, bases.stream().map(Concept::toString).collect(Collectors.joining(", ")));
-				//incrementSummaryInformation("Issue detected");
 				substancesWithMultipleModifications.add(c);
 			}
 		}
@@ -58,8 +51,8 @@ public class MultipleModifications extends TermServerReport {
 	private List<Concept> getBases(Concept c) {
 		return c.getRelationships(CharacteristicType.STATED_RELATIONSHIP, IS_MODIFICATION_OF, ActiveState.ACTIVE)
 				.stream()
-				.map(rel -> rel.getTarget())
-				.collect(Collectors.toList());
+				.map(Relationship::getTarget)
+				.toList();
 	}
 
 	private void findCDsWithMultipleModifications() throws TermServerScriptException {
@@ -68,9 +61,9 @@ public class MultipleModifications extends TermServerReport {
 				if (substancesWithMultipleModifications.contains(r.getTarget())) {
 					String basesStr = getBases(r.getTarget())
 							.stream()
-							.map(t -> t.toString())
+							.map(Concept::toString)
 							.collect(Collectors.joining(", \n"));
-					report (c, r.getType().getPreferredSynonym(), r.getTarget(), basesStr);
+					report(c, r.getType().getPreferredSynonym(), r.getTarget(), basesStr);
 				}
 			}
 		}
